# spot-video

./: .gitignore  LICENSE  README.md  download.py  generate_data.py  main.py  prepare_dataset.py  pyproject.toml
data/downloads/: README.md
spotvideo/augment/: FIR_filter.py  __init__.py  abstract_image_augmentor.py  add_noise.py  affine_transform.py  dilate.py  erode.py  feather.py  flip.py  frame_drop.py  gamma.py  gaussian_blur.py  grayscale.py  identity.py  invert.py  mirror.py  multiply_noise.py  perspective_transform.py  reduce_bit_depth.py  roll.py  sobel_filter.py  tile.py  zeroing_edge.py
spotvideo/model/: similarity.py
spotvideo/preprocess/: signal.py
spotvideo/type/: dataset.py  result.py
spotvideo/util/: draw.py  metric.py  video.py
